--- a/translations/messages.pl.xlf
+++ b/translations/messages.pl.xlf
@@ -112,7 +112,7 @@
             </trans-unit>
             <trans-unit id="action_create">
                 <source>action_create</source>
-                <target>Stwórz</target>
+                <target>Utwórz</target>
             </trans-unit>
             <trans-unit id="action_delete">
                 <source>action_delete</source>
@@ -233,6 +233,42 @@
             <trans-unit id="message_deleted_successfully">
                 <source>message_deleted_successfully</source>
                 <target>Usunięto pomyślnie</target>
+            </trans-unit>
+            <trans-unit id="message_created_successfully">
+                <source>message_created_successfully</source>
+                <target>Utworzono pomyślnie</target>
+            </trans-unit>
+            <trans-unit id="label_password">
+                <source>label_password</source>
+                <target>Hasło</target>
+            </trans-unit>
+            <trans-unit id="label_password_repeat">
+                <source>label_password_repeat</source>
+                <target>Powtórz hasło</target>
+            </trans-unit>
+            <trans-unit id="title_todolist_create">
+                <source>title_todolist_create</source>
+                <target>Dodaj zadanie</target>
+            </trans-unit>
+            <trans-unit id="label_new_firstname">
+                <source>label_new_firstname</source>
+                <target>Nowe imię</target>
+            </trans-unit>
+            <trans-unit id="label_new_lastname">
+                <source>label_new_lastname</source>
+                <target>Nowe nazwisko</target>
+            </trans-unit>
+            <trans-unit id="label_new_email">
+                <source>label_new_email</source>
+                <target>Nowy email</target>
+            </trans-unit>
+            <trans-unit id="label_new_password">
+                <source>label_new_password</source>
+                <target>Nowe hasło</target>
+            </trans-unit>
+            <trans-unit id="label_new_password_repeat">
+                <source>label_new_password_repeat</source>
+                <target>Powtórz nowe hasło</target>
             </trans-unit>
         </body>
     </file>
